--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
             <li class="item"><a href="/" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <div class="contacts">
-          <ul class="site-contacts list">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="site-contacts link">info@devstudio.com</a>
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="site-contacts link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="site-contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="site-contacts link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="site-contacts link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -106,23 +104,31 @@
           <ul class="team-list list">
             <li class="item">
               <img class="team-img" src="./images/img4.jpg" alt="Игорь Демьяненко" width="270" />
-              <h3 class="team-name">Игорь Демьяненко</h3>
-              <p class="team-profession">Designer</p>
+              <div class="team-card">
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p class="team-profession">Designer</p>
+              </div>
             </li>
             <li class="item">
               <img class="team-img" src="./images/img5.jpg" alt="Ольга Репина" width="270" />
-              <h3 class="team-name">Ольга Репина</h3>
-              <p class="team-profession">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-name">Ольга Репина</h3>
+                <p class="team-profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img class="team-img" src="./images/img6.jpg" alt="Николай Тарасов" width="270" />
-              <h3 class="team-name">Николай Тарасов</h3>
-              <p class="team-profession">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p class="team-profession">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img class="team-img" src="./images/img7.jpg" alt="Михаил Ермаков" width="270" />
-              <h3 class="team-name">Михаил Ермаков</h3>
-              <p class="team-profession">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p class="team-profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
